# VisCar-SDV-Generator

./: Dockerfile  README.md  antigravity.yaml  demo.css  demo.js  index.html  requirements.txt
applications/: generate_vehicle_health.py
applications/vehicle_health/: BUILD.md
applications/vehicle_health/services/AnalyticsService/: Cargo.toml  analytics_service.rs
applications/vehicle_health/services/BatteryDegradationService/: battery_degradation_service.rs
applications/vehicle_health/services/DiagnosticsService/: DiagnosticsService.cpp
applications/vehicle_health/services/PredictionService/: Cargo.toml  prediction_service.rs
applications/vehicle_health/services/VehicleDataService/: CMakeLists.txt  VehicleDataService.cpp
applications/vehicle_health/tests/VehicleDataService/: test_vehicle_data_service.cpp
framework/: __init__.py  __main__.py
framework/compliance/: __init__.py  aspice_mapper.py  misra_checker.py
framework/core/: __init__.py  engine.py  orchestrator.py
framework/generators/: __init__.py  code_gen_cpp.py  code_gen_java.py  code_gen_rust.py
framework/llm/: __init__.py  gemini_client.py  jules_client.py
framework/ota/: __init__.py  ota_manager.py
framework/soa/: __init__.py  service_base.py  service_registry.py
